Fix bug in include and exclude filters
* Whitespace in the `include` and `exclude` filters for running subset of
  attacks was breaking the list of attacks that needed to be filtered.

Co-authored-by: Andrew Cook <andrew.cook@mindgard.ai>